--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 header {
-    background-color: rgb(104, 96, 209);
-    color: #fdf8f8;
+    background-color: rgb(49, 45, 104);
+    color: #ffffff;
 }
 
 .cabecalho-imagem{
-    width: 70%;
+    width: 30%;
 }
